--- a/src/App.css
+++ b/src/App.css
@@ -22,16 +22,66 @@
   font-size: large;
 }
 
-.block {
+.block1 {
   width: 85px;
   display: table-cell;
-  padding: 1.5em 0 0 0;
   text-align: center;
+  background: #00bfff;
+}
+
+.block2 {
+  width: 85px;
+  display: table-cell;
+  text-align: center;
+  background: #1e90ff;
+}
+
+.block3 {
+  width: 85px;
+  display: table-cell;
+  text-align: center;
+  background: #6495ed;
+}
+
+.block4 {
+  width: 85px;
+  display: table-cell;
+  text-align: center;
+  background: #4169e0;
+}
+
+.block5 {
+  width: 85px;
+  display: table-cell;
+  text-align: center;
+  background: #0000cd;
+}
+
+.cent {
+  display: table-cell;
+  text-align: center;
+  background: #87cefa;
+  height: 165px;
+}
+
+.icon {
+  background: #87cefa;
+  margin-bottom: 0;
 }
 
 .forecast {
   display: table;
   margin: 0 auto;
+  margin-top: -155px;
+}
+
+.forecast1 {
+  display: table;
+  margin: 0 auto;
+  height: 165px;
+  width: 428px;
+  margin-bottom: 0;
+  margin-top: -32px;
 }
 
 .temp {
@@ -41,6 +91,12 @@
 
 .day {
   opacity: 0.7;
+}
+
+.head {
+  background: #1e90ff;
+  width: 428px;
+  margin: 0 auto;
 }
 
 @keyframes App-logo-spin {
