--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
   font-size: large;
 }
 
+.search-input{
+width: 434px;
+}
+
 .head {
   background: #1e90ff;
   width: 490px;
@@ -102,11 +106,11 @@
   width: 490px;
 }
 
-input {
-  width: 433px;
-}
-
 @media (max-width: 490px) {
+	
+  .search-input{
+    width: 80%;
+}
 	
   .head {
     margin: 0 auto;
@@ -144,10 +148,6 @@ input {
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 0 auto;
-  }
-
-  input {
-    width: 80%;
   }
   
   .box {
